# mcp-pagoda

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ruff.yml
src/mcp_server/: __init__.py  lib.py  model.py  server.py  server_sse.py  server_stdio.py
src/mcp_server/drivers/: pagoda.py
src/mcp_server/lib/: http.py  log.py  pagoda.py  type.py
src/mcp_server/lib/auth/: azure.py  common.py
src/mcp_server/prompts/: lb.py
src/mcp_server/tools/: common.py  datacenter.py  router.py
